--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.4
+  lottie: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
     uses-material-design: true
     assets: 
     - assets/images/logo.png
+    - assets/waiting.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
