--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.4
   lottie: ^2.0.0
+  expandable: ^5.0.1
+  cloud_firestore: ^4.2.0
+  
 
 dev_dependencies:
   flutter_test:
